Working Login returns username on success and 'wrong password' on failure

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport": "*",
     "passport-http": "*",
     "passport-local": "*",
+    "passport-request": "*",
     "serve-favicon": "~2.3.0"
   }
 }
